fixed breakpoints not showing up

--- a/public/Styles/style.css
+++ b/public/Styles/style.css
@@ -119,6 +119,15 @@ section > #editor {
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
+.js-loading-overlay {
+  background-color: rgba(0,0,0,.7);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 @-webkit-keyframes fadein {
     from {bottom: 0; opacity: 0;}
     to {bottom: 30px; opacity: 1;}
